@@ -1,5 +1,6 @@
 package com.asset.ccat.gateway.services;
 
+import com.asset.ccat.gateway.cache.LookupsCache;
 import com.asset.ccat.gateway.defines.ErrorCodes;
 import com.asset.ccat.gateway.exceptions.GatewayException;
 import com.asset.ccat.gateway.logger.CCATLogger;
@@ -19,13 +20,12 @@ import com.asset.ccat.gateway.models.users.LkHLRProfileModel;
 import com.asset.ccat.gateway.models.users.LkMonetaryLimitModel;
 import com.asset.ccat.gateway.models.users.MenuItem;
 import com.asset.ccat.gateway.proxy.LookupsServiceProxy;
+import com.asset.ccat.gateway.redis.model.OffersRedisModel;
+import com.asset.ccat.gateway.redis.repository.OffersRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.*;
 
 /**
  * @author marwa.elshawarby
@@ -35,6 +35,19 @@ public class LookupsService {
 
     @Autowired
     private LookupsServiceProxy lookupServiceProxy;
+
+    @Autowired
+    private LookupsCache lookupsCache;
+
+    private OffersRepository offersRepo;
+
+
+    public Map<String, Boolean> getPagesLookup() throws GatewayException {
+        CCATLogger.DEBUG_LOGGER.debug("Started getting pages lookup service...");
+        Map<String, Boolean> pages = lookupServiceProxy.getAppPages();
+        CCATLogger.DEBUG_LOGGER.debug("Ended getting pages lookup service successfully");
+        return pages;
+    }
 
     public GetMenusLKResponse getMenusLookup() throws GatewayException {
         CCATLogger.DEBUG_LOGGER.debug("Started getting menu lookup service...");
@@ -57,13 +70,30 @@ public class LookupsService {
         return new GetMonetaryLimitsLKResponse(monetaryLimits);
     }
 
-    public GetOffersLKResponse getOffersLookup() throws GatewayException {
-        CCATLogger.DEBUG_LOGGER.debug("Started getting offers lookup service...");
-        List<LkOfferModel> offers = lookupServiceProxy.getOffersLookup();
-        CCATLogger.DEBUG_LOGGER.debug("Ended getting offers lookup service successfully");
-        offers = offers.stream().filter(LkOfferModel::getIsDropDownEnabled).collect(Collectors.toList());
-        return new GetOffersLKResponse(offers);
+    public GetOffersLKResponse getOffersLookup(PaginationModel pagination) throws GatewayException {
+        List<LkOfferModel> offers = lookupsCache.getLkOffers();
+        if (offers == null) {
+            CCATLogger.DEBUG_LOGGER.debug("Started getting offers from lookup service...");
+            offers = lookupServiceProxy.getOffersLookup();
+            lookupsCache.setLkOffers(offers);
+        }
+
+        offers = offers.stream().filter(LkOfferModel::getIsDropDownEnabled).toList();
+
+        CCATLogger.DEBUG_LOGGER.debug("Applying pagination: {} for offers size = {}", pagination, offers.size());
+        int offset = pagination.getOffset() != null ? pagination.getOffset() : 0;
+        int fetchCount = pagination.getFetchCount() != null ? pagination.getFetchCount() : offers.size();
+        int endIndex = Math.min(offset + fetchCount, offers.size());
+
+        // Check for invalid offset
+        if (offset >= offers.size()) {
+            lookupsCache.setLkOffers(null);
+            return new GetOffersLKResponse(Collections.emptyList());
+        }
+
+        return new GetOffersLKResponse(offers.subList(pagination.getOffset(), endIndex));
     }
+
 
     public GetAllHLRProfileResponse getHLRProfilesLookup() throws GatewayException {
         CCATLogger.DEBUG_LOGGER.debug("Started getting HLRProfiles lookup service...");
@@ -160,8 +190,15 @@ public class LookupsService {
     }
 
     public HashMap<String, FootPrintPageModel> getFootPrintPages() throws GatewayException {
-        HashMap<String, FootPrintPageModel> footPrintPages = lookupServiceProxy.getFootPrintPages();
-        return footPrintPages;
+        return lookupServiceProxy.getFootPrintPages();
+    }
+
+    public Map<String, Boolean> getAppPages() throws GatewayException {
+        return lookupServiceProxy.getAppPages();
+    }
+
+    public List<String> getVIPSubscribers() throws GatewayException {
+        return lookupServiceProxy.getVIPSubscribers();
     }
 
     public GetMaredCardsLKResponse getMaredCards() throws GatewayException {
@@ -171,18 +208,9 @@ public class LookupsService {
         return new GetMaredCardsLKResponse(maredCards);
     }
 
-    public List<FafIndicatorModel> getAllFafIndicators() {
+    public List<FafIndicatorModel> getAllFafIndicators() throws GatewayException {
         CCATLogger.DEBUG_LOGGER.debug("Started getting faf indicators lookup ...");
-        List<FafIndicatorModel> fafIndicator = new ArrayList<>();
-        for (Integer i = 1; i < 20; i++) {
-            FafIndicatorModel indicator = new FafIndicatorModel();
-            indicator.setIndicatorId(i);
-            indicator.setIndicatorName("lookup indicator number" + i);
-            indicator.setMappedIndicatorId(1);
-            fafIndicator.add(indicator);
-        }
-        CCATLogger.DEBUG_LOGGER.debug("Ended getting faf indicators lookup successfully");
-        return fafIndicator;
+        return lookupServiceProxy.getAllFafIndicators();
     }
 
     public List<ReasonActivityModel> getCallActivities(GetAllCallActivitiesRequest request) throws GatewayException {
